--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-<H1> Jianfeng Zhang Blog </H1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jianfeng Zhang's Tech Blog</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        header {
+            background-color: #f4f4f4;
+            padding: 1rem;
+            text-align: center;
+        }
+        h1 {
+            color: #333;
+        }
+        .article-list {
+            margin-top: 2rem;
+        }
+        .article {
+            margin-bottom: 1rem;
+            padding: 1rem;
+            background-color: #fff;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Jianfeng Zhang's Tech Blog</h1>
+        <p>Sharing knowledge and insights on technology</p>
+    </header>
+
+    <main>
+        <section class="article-list">
+            <h2>Latest Articles</h2>
+            <!-- Article entries will be added here -->
+            <article class="article">
+                <h3>Sample Article Title</h3>
+                <p>This is a brief description of the article. Click to read more...</p>
+                <a href="#">Read More</a>
+            </article>
+            <!-- More articles can be added here -->
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 Jianfeng Zhang. All rights reserved.</p>
+    </footer>
+</body>
+</html>
